--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -6,36 +6,50 @@ body {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   line-height: 28px;
-  padding-top: 60px;
+  padding-top: 50px;
   /* Add top padding for navbar-top-fixed */
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   /* Add top padding for navbar-top-fixed */ }
-  body .brand {
-    margin-left: 0;
-    padding-left: 0; }
+  body .navbar-fixed-top .navbar-inner,
   body .navbar-inner {
     background-color: white;
     background-image: none;
     border-radius: 0;
-    box-shadow: none;
     border: none;
     padding-left: 0;
-    padding-right: 0; }
+    padding-right: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none; }
+    body .navbar-fixed-top .navbar-inner h1 a.brand,
+    body .navbar-inner h1 a.brand {
+      margin-left: 0;
+      padding-left: 0;
+      background: url("../../templates/img/osv-logo.png") 0 0 no-repeat;
+      width: 266px;
+      height: 53px;
+      display: block; }
+    body .navbar-fixed-top .navbar-inner .nav,
     body .navbar-inner .nav {
       display: block;
       position: relative;
       margin-right: 10px; }
+      body .navbar-fixed-top .navbar-inner .nav .icon-home,
       body .navbar-inner .nav .icon-home {
         display: none; }
+      body .navbar-fixed-top .navbar-inner .nav a,
       body .navbar-inner .nav a {
         -webkit-transition: 1s all ease;
         -moz-transition: 1s all ease;
         transition: 1s all ease;
-        border-bottom: 3px solid white; }
+        border-bottom: 3px solid white;
+        text-transform: uppercase; }
+      body .navbar-fixed-top .navbar-inner .nav .active > a,
       body .navbar-inner .nav .active > a {
         background-color: transparent;
         box-shadow: none;
         border-bottom: 3px solid #81983c; }
+      body .navbar-fixed-top .navbar-inner .nav .active a:hover,
       body .navbar-inner .nav .active a:hover {
         background-color: transparent;
         box-shadow: none;
@@ -53,6 +67,24 @@ body {
     -webkit-border-radius: 0;
     padding-left: 0;
     padding-right: 0; }
+  body .nav-pills > li > a {
+    color: #55606a; }
+    body .nav-pills > li > a a.selected {
+      color: #81983c; }
+  body #home {
+    position: relative;
+    overflow: hidden;
+    height: 600px;
+    background: url("../../templates/img/ring1.jpg") 50% 45% no-repeat;
+    width: 100%; }
+
+.screen-reader-text {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden; }
 
 .modal.fade {
   -webkit-transition: opacity 0.5s linear, 0.3s ease-out;
