--- a/templates/project/styles.scss
+++ b/templates/project/styles.scss
@@ -20,22 +20,29 @@ body {
 	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 	line-height: 28px;
-	padding-top: 60px; /* Add top padding for navbar-top-fixed */
-  	padding-bottom: 40px; /* Add top padding for navbar-top-fixed */
+	padding-top: 50px; /* Add top padding for navbar-top-fixed */
+  	padding-bottom: 30px; /* Add top padding for navbar-top-fixed */
 
-
-	.brand {
-		margin-left: 0;
-		padding-left: 0;
-	}
+	.navbar-fixed-top .navbar-inner,
 	.navbar-inner {
 		background-color: $mainColour;
 		background-image: none;
 		border-radius: 0;
-		box-shadow: none;
 		border: none;
 		padding-left: 0;
 		padding-right: 0;
+		box-shadow: none;
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+
+		h1 a.brand {
+			margin-left: 0;
+			padding-left: 0;
+			background: url('../../templates/img/osv-logo.png') 0 0 no-repeat;
+			width: 266px;
+			height: 53px;
+			display: block;
+		}
 
 		.nav {
 			display: block;
@@ -51,6 +58,7 @@ body {
 				-moz-transition: 1s all ease;
 				transition: 1s all ease;
 				border-bottom: 3px solid $mainColour;
+				text-transform: uppercase;
 			}
 			
 			.active  > a {
@@ -86,6 +94,31 @@ body {
 		padding-left: 0;
 		padding-right: 0;
 	}
+
+	.nav-pills > li > a {
+		color: $textColour;
+
+		a.selected {
+			color: $accentColour;
+		}
+	}
+
+	#home {
+		position: relative;
+		overflow: hidden;
+		height: 600px;
+		background: url('../../templates/img/ring1.jpg') 50% 45% no-repeat;
+		width: 100%;
+	}
+}
+
+.screen-reader-text {
+	position:absolute;
+	left:-10000px;
+	top:auto;
+	width:1px;
+	height:1px;
+	overflow:hidden;
 }
 
 .modal.fade {
@@ -95,6 +128,12 @@ body {
 	transition: opacity 0.5s linear, 0.3s ease-out;
 	top: 25%;
 }
+
+
+
+
+
+
 
 /* Remove top padding when top navbar goes static in narrow viewports */
 @media (max-width: 979px) {
